[package]
name = "propagate-status-code-plugin-example"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The Guild"]
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
publish = false

[lib]

[[bin]]
name = "hive_router_with_propagate_status_code"
path = "src/main.rs"

[dependencies]
hive-router = { version = "*", path = "../../bin/router" }
serde = { workspace = true }

[dev-dependencies]
e2e = { version = "*", path = "../../e2e" }