[package]
name = "response-cache-plugin-example"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The Guild"]
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
publish = false

[lib]

[[bin]]
name = "hive_router_with_response_cache"
path = "src/main.rs"

[dependencies]
hive-router = { version = "*", path = "../../bin/router" }
serde = { workspace = true }
redis = { version= "1.0.0", features = ["r2d2"]}
r2d2 = "0.8.10"

[dev-dependencies]
e2e = { version = "*", path = "../../e2e" }
