[package]
name = "usage-reporting-plugin-example"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The Guild"]
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
publish = false

[lib]

[[bin]]
name = "hive_router_with_usage_reporting"
path = "src/main.rs"

[dependencies]
hive-router = { version = "*", path = "../../bin/router" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
e2e = { version = "*", path = "../../e2e" }
